--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet"
         href="[![Typing SVG](https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=900&pause=1000&random=false&width=435&lines=%24gh+issue)](https://git.io/typing-svg)">
 
-    <title> my website</title>
+    <title> Github Cli Clone</title>
 
 
 </head>
@@ -65,7 +65,7 @@
                 <h3 class="center"><a href="https://git.io/typing-svg"><img
                             src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=1000&color=ECF7F7&random=false&width=435&lines=%24+gh+issue"
                             alt="Typing SVG" /></a></h3>
-                <p class="center">View your pull requests’ checks.</p>
+                <p class="aligncenter">View your pull requests’ checks.</p>
             </div>
             <div class="section-screenshot">
                 <br>
